<resources>
    <string name="app_name">ExamAndroid</string>
    <string name="hello_map_fragment">Hello map fragment</string>
    <string name="hello_list_fragment">Hello list fragment</string>
    <string name="hello_detail_fragment">Hello detail fragment</string>
    <string name="button_list">Liste des lieux</string>
    <string name="button_map">Carte</string>
    <string name="edit">Éditer</string>
    <string name="delete">Supprimer</string>
    <string name="no_places">Aucun lieu</string>
    <string name="cancel">Annuler</string>
    <string name="submit">Valider</string>
    <string name="NamePlace">Nom du lieu</string>
    <string name="description">Description</string>
    <string name="phoneNumber">Numéro de téléphone</string>
    <string name="mail">Mail</string>
    <string name="url">Site Internet</string>
</resources>